@@ -627,21 +627,23 @@ Device=/dev/ttyS0
 # Set the display size [default: 20x4]
 Size=20x4
 
-# Switch on the backlight? [default: yes]
-# NOTE: The driver will ignore this if the display is a vfd or vkd
-#       as they crash if the backlight is turned off
-Backlight=yes
+# Set the display type [default: lcd; legal: lcd, lkd, vfd, vkd]
+Type=lkd
 
 # Set the initial contrast [default: 480]
 # NOTE: The driver will ignore this if the display
 #       is a vfd or vkd as they don't have this feature
 Contrast=480
 
+# Set the initial brightness [default: 1000; legal: 0 - 1000]
+Brightness=1000
+# Set the initial off-brightness [default: 0; legal: 0 - 1000]
+# This value is used when the display is normally
+# switched off in case LCDd is inactive
+OffBrightness=0
+
 # Set the communication speed [default: 19200; legal: 1200, 2400, 9600, 19200]
 Speed=19200
-
-# Set the display type [default: lcd; legal: lcd, lkd, vfd, vkd]
-Type=lkd
 
 # The following table translates from MtxOrb key letters to logical key names.
 # By default no keys are mapped, meaning the keypad is not used at all.
